[package]
name = "catdex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0.73"
handlebars={version="4.1.6",features=["dir_source"]}
actix-web = "3"
actix_files = "0.3.0"
serde ="1.0.132"
diesel ={version ="1.4.8",features =["postgres","r2d2"]}
r2d2 = "0.8.9"